tests/cases/errors/parser/stmt_yield.vnm
fn main() {
  let x = 0;
  let y = 1;
  if (x < y) {
    yield "Hello, world!"
  }
  return 0;
}

main();
